Readd NumPy 1.11 pinning

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
       - setuptools
       - mkl-devel
       - cython
-      - numpy
+      - numpy 1.11.*
     run:
       - python
       - mkl
