--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,4 @@
 {% set version = "1.0.2" %}
-{% set buildnumber = 1 %}
-
 
 package:
     name: mkl_random
@@ -11,7 +9,7 @@ source:
     sha256: 2270ef2834f6552850533aad01500d27c8e056f2cfbdbdb751593000aea1159e
 
 build:
-    number: {{ buildnumber }}
+    number: 2
     skip: True  # [win and py27]
 
 requirements:
