--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,6 +32,7 @@ test:
       - nosetests -v mkl_random
     requires:
       - nose
+      - numpy >=1.14
     imports:
       - mkl_random
       - mkl_random.mklrand
