--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,8 +9,10 @@ source:
     sha256: 2270ef2834f6552850533aad01500d27c8e056f2cfbdbdb751593000aea1159e
 
 build:
-    number: 2
+    number: 3
     skip: True  # [win and py27]
+    ignore_run_exports:
+      - blas
 
 requirements:
     build:
