--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,11 +5,11 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/IntelPython/mkl_random/archive/v{{ version }}.tar.gz
-  sha256: a7685ff6cb027296baa854f530065db022dd970789e0d47542cbfae20408181c
+  url: https://github.com/IntelPython/mkl_random/archive/v{{ version }}.post0.tar.gz
+  sha256: fa569a82797dbc6d5eb9a237c632692f85fef4857b01b98a75f12e15a1e8643e
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win and py27]
   ignore_run_exports:
     - blas
