--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,8 +23,7 @@ requirements:
     - setuptools
     - mkl-devel
     - cython
-    - numpy 1.14.*    # [osx]
-    - numpy    # [not osx]
+    - numpy
   run:
     - python
     - mkl
