--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,8 +5,8 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/IntelPython/mkl_random/archive/v{{ version }}.tar.gz
-  sha256: e9186176e31611a860c546c9c323c55607a94fd3abbf42334ecbded8a024a3e2
+  url: https://github.com/IntelPython/mkl_random/archive/v{{ version }}.post0.tar.gz
+  sha256: 93af123c7768088f174a579699ba7ee192436e3c7f9cae2a7cd5e2e2d7748308
 
 build:
   number: 0
