--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "1.2.6" %}
+{% set version = "1.2.7" %}
 
 package:
   name: mkl_random
@@ -6,10 +6,10 @@ package:
 
 source:
   url: https://github.com/IntelPython/mkl_random/archive/v{{ version }}.tar.gz
-  sha256: e82f7a6efedbc58baf31db37932751a6065f861c4ca5d1e059920a051b6755ee
+  sha256: b6d39f4847921b6603201a491225b086aa75a1c1667ea7068b8813e0514133f7
 
 build:
-  number: 1
+  number: 0
   ignore_run_exports:
     - blas
 
@@ -28,7 +28,7 @@ requirements:
   run:
     - python
     - mkl
-    - numpy <2.0dev0
+    - numpy
 
 test:
   commands:
